// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageSelectButtons ImageSelectButtons with image selected matches the snapshot 1`] = `
Array [
  <button
    className="yoast-button yoast-button--secondary"
    id=""
    onClick={[Function]}
    type="button"
  >
    Replace image
  </button>,
  <button
    className="yoast-remove"
    id=""
    onClick={[Function]}
    type="button"
  >
    Remove image
  </button>,
]
`;

exports[`ImageSelectButtons ImageSelectButtons without image selected matches the snapshot 1`] = `
<button
  className="yoast-button yoast-button--secondary"
  id=""
  onClick={[Function]}
  type="button"
>
  Select image
</button>
`;
